Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40912

Incorrect rendering of soft hyphens in Qt WebKit (regression)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0 Beta
    • 5.3.1
    • WebKit
    • None
    • linux, 64bit, Arch both with distro packages and compiled from source.

      Soft hyphens are incorrectly rendered as spaces on linux by QWebView. Run the attached trivial PyQt script which simply creates QWebView and adds some text with soft hyphens in it. The soft hyphens are rendered as spaces. QWebView prints the following errors to console:

      load glyph failed err=6 face=0x1f80c90, glyph=2793

      This behavior is seen on linux, but not on windows. Did not bother to test OS X. Attached a screenshot showing incorrect rendering.

        1. bad.png
          4 kB
          Kovid Goyal
        2. test.py
          0.5 kB
          Kovid Goyal
        3. test2.py
          0.5 kB
          Kovid Goyal
        4. shy.png
          1 kB
          Kovid Goyal
        5. test.zip
          0.7 kB
          Kovid Goyal
        6. soft_hyphens_none.png
          196 kB
          Kovid Goyal
        7. soft_hyphens_yes.png
          205 kB
          Kovid Goyal
        8. shy-osx.png
          8 kB
          Kovid Goyal
        9. verdana.ttf
          182 kB
          Kovid Goyal
        10. full_fix.patch
          5 kB
          Kovid Goyal
        11. all.patch
          3 kB
          Kovid Goyal
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            kovid Kovid Goyal
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes